# wiggy_conversion

./: .gitignore  pyproject.toml  run.bat  run_webhook.py  settings.py
alembic/: env.py
app/: __init__.py
app/backtest/: core.py
app/ml/: candles.py  lstm.h5  lstm.py  v2.py
app/routes/: __init__.py
app/shared/auth/: auth_handler.py  token_handler.py
app/shared/bases/: base_model.py  base_responses.py
app/shared/helper/: json_from_schema.py  schema_to_json.py  sync_prisma.py
app/shared/managers/: socket_manager.py
app/shared/middleware/: auth.py  json_encoders.py  request_logging.py
app/shared/redis/: cache.py  redis_services.py
app/shared/redis/tests/: appmap.yml  test_online_users.py  test_redis_serializer.py  wat
app/shared/redis/tests/tmp/appmap/pytest/: test_online_users_TestOnline_test_add_existing_user_to_online_list.appmap.json  test_online_users_TestOnline_test_add_user_to_online_list.appmap.json  test_online_users_TestOnline_test_empty_list_of_online_users.appmap.json  test_online_users_TestOnline_test_remove_nonexistent_user_from_online_list.appmap.json  test_online_users_TestOnline_test_remove_user_from_online_list.appmap.json  test_online_users_TestOnline_test_retrieve_online_users.appmap.json  test_redis_serializer_TestRedisCRUD_test_delete_session_child.appmap.json  test_redis_serializer_TestRedisCRUD_test_get.appmap.json  test_redis_serializer_TestRedisCRUD_test_get_session.appmap.json  test_redis_serializer_TestRedisCRUD_test_get_user.appmap.json  (+2 more)
app/strategy/: chart_logic.py  core.py  lookup_schemas.py  signal.py  test.py  test_chart.py  utility.py
app/strategy/schemas/: actions.py  enums.py  models.py
app/webhook/: models.py  schemas.py  views.py
old/: models.py  script.py  stub.py
old/auth/: __init__.py  views.py
old/full/: __init__.py  __run__.py
old/user/: __init__.py
